<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context="edu.fullsail.aboynton.boyntonallen_ce02.MainActivity"
    android:background="@android:color/darker_gray">

    <Button android:id="@+id/submit_guess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/submit_guess"
        tools:layout_conversion_absoluteX="16dp"
        tools:layout_conversion_absoluteY="394dp"
        tools:layout_conversion_absoluteWidth="352dp"
        tools:layout_conversion_absoluteHeight="50dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:background="@drawable/button_style"/>

    <LinearLayout android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp">

        <EditText android:id="@+id/number_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:maxLength="1"
            android:inputType="number"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/number_two"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:fontFamily="sans-serif"
            android:hint="@string/hint1"
            android:textSize="22sp" />

        <EditText android:id="@+id/number_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:maxLength="1"
            android:inputType="number"
            tools:layout_conversion_absoluteX="16dp"
            tools:layout_conversion_absoluteY="110dp"
            tools:layout_conversion_absoluteWidth="352dp"
            tools:layout_conversion_absoluteHeight="94dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_one"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:fontFamily="sans-serif"
            android:hint="@string/hint2"
            android:textSize="22sp" />

        <EditText android:id="@+id/number_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:maxLength="1"
            android:inputType="number"
            tools:layout_conversion_absoluteX="16dp"
            tools:layout_conversion_absoluteY="205dp"
            tools:layout_conversion_absoluteWidth="352dp"
            tools:layout_conversion_absoluteHeight="94dp"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/number_two"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:fontFamily="sans-serif"
            android:hint="@string/hint3"
            android:textSize="22sp" />

        <EditText android:id="@+id/number_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:maxLength="1"
            android:inputType="number"
            tools:layout_conversion_absoluteX="16dp"
            tools:layout_conversion_absoluteY="299dp"
            tools:layout_conversion_absoluteWidth="352dp"
            tools:layout_conversion_absoluteHeight="95dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/number_three"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:fontFamily="sans-serif"
            android:hint="@string/hint4"
            android:textSize="22sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
